--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
           passphrase: ${{ secrets.PGP_PASSPHRASE }}
 
       - name: Publish to Maven Central
-        run: sbt --batch --no-colors ";ci-release;gigamap/ci-release;storageSqlite/ci-release"
+        run: sbt --batch --no-colors ci-release gigamap/ci-release storageSqlite/ci-release
         env:
           PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
           PGP_SECRET: ${{ secrets.PGP_SECRET }}
