feat: update dependencies to version 1.0.4 and enhance CI workflow with additional project checks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,10 @@ jobs:
         run: |
           sbt scalafmtCheckAll
           sbt test
+          sbt "project gigamap" scalafmtCheckAll
+          sbt "project gigamap" test
+          sbt "project storageSqlite" scalafmtCheckAll
+          sbt "project storageSqlite" test
 
   publish:
     name: Publish to Maven Central
