Refactor vector index configuration and service for improved readability
- Updated documentation comments in VectorIndexConfig to enhance clarity and consistency.
- Reformatted case class parameters in VectorIndexConfig for better alignment.
- Simplified import statements in VectorIndexService and reorganized code for better readability.
- Enhanced documentation in VectorSearchResult and Vectorizer for consistency.
- Cleaned up test specifications in AdvancedGigaMapSpec, GigaMapRestartSpec, GigaMapSpec, VectorIndexServiceSpec, and VectorSimilaritySpec for improved clarity and organization.
- Refactored SQLiteAdapter and SQLiteStorage to streamline configuration methods and improve code readability.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,11 +35,11 @@ jobs:
 
       - name: Check formatting and run tests
         run: |
-          sbt scalafmtCheckAll
+          sbt check
           sbt test
-          sbt "project gigamap" scalafmtCheckAll
+          sbt "project gigamap" check
           sbt "project gigamap" test
-          sbt "project storageSqlite" scalafmtCheckAll
+          sbt "project storageSqlite" check
           sbt "project storageSqlite" test
 
   publish:
