--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -6,5 +6,6 @@ eclipsestore {
   }
   maxParallelism = 8
   batchSize = 50
+  autoRegisterSchemaHandlers = false
   backupDirectory = "/tmp/zio-eclipsestore-config-test/backup"
 }
